fixed broken figure references problem

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -2290,8 +2290,7 @@ An example of such a lattice appears in the diagram in Figure~\ref{fig:shareshia
     \input{inputs/tikz/Shareshian.tex}
   \end{tikzpicture}
 \end{center}
-\label{fig:shareshian}
-\caption{A possibly non-representable lattice.}
+\caption{A possibly non-representable lattice.}\label{fig:shareshian}
 \end{figure}
 %% \includegraphics[width=4cm]{inputs/94tov.png}  
 While the conjecture---that this lattice is not
