--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -1002,7 +1002,7 @@ It is easy to check that $\Theta$ preserves all meets and joins of
 $\EqX$. The inverse isomorphism is $\ker: \IC(X) \to \EqX$.
 That is, $\ker$ preserves all meets and joins of $\IC(X)$ (with lattice order
 $\sqsubseteq$), $\ker \Theta$ is the identity on $\EqX$, and $\Theta \ker$
-is the identity on $\IC(x)$.
+is the identity on $\IC(X)$.
 
 Suppose $S$ is a finite nonabelian simple group, and consider the direct power $S^n$.
 An element of $S^n$ may be viewed either as a function, $\bx : \nn \to S$,
