added bibentry for algebrafiles repo

--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -349,6 +349,15 @@ MRREVIEWER = {Andrea Lucchini},
     MRNUMBER = {831317 (87i:08006)},
     MRREVIEWER = {Charles S. Holmes},
   }
+@misc{william_demeo_2016_53936,
+  author       = {William DeMeo and
+                  Ralph Freese},
+  title        = {AlgebraFiles v1.0.1},
+  month        = May,
+  year         = 2016,
+  doi          = {10.5281/zenodo.53936},
+  url          = {http://dx.doi.org/10.5281/zenodo.53936}
+}
 \end{filecontents*}
 
 
